...
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GHV-Wg-l55">
                                <rect key="frame" x="186" y="747" width="42" height="20"/>
                                <accessibility key="accessibilityConfiguration" identifier="userIDLabel"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="20" id="tJn-LL-8UU"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
...
                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LOGO_ISDISCO" translatesAutoresizingMaskIntoConstraints="NO" id="6uZ-Wk-BC5">
                                        <rect key="frame" x="20" y="80" width="370" height="330"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="330" id="d12-sB-4j4"/>
                                        </constraints>
                                    </imageView>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Spiller nu" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Tkw-cs-4C4">
                                        <rect key="frame" x="87" y="30" width="236" height="20"/>
                                        <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
                                        <color key="textColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dto-EZ-BIc">
                                        <rect key="frame" x="157" y="538" width="96" height="33"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="33" id="Pwm-4y-1pc"/>
                                        </constraints>
                                        <color key="tintColor" red="0.11372549019607843" green="0.72549019607843135" blue="0.32941176470588235" alpha="0.84705882352941175" colorSpace="calibratedRGB"/>
                                        <state key="normal" title="Åben i Spotify"/>
                                        <connections>
                                            <action selector="openInSpotify:" destination="boO-hL-DVq" eventType="touchUpInside" id="UDc-TJ-0gm"/>
                                        </connections>
                                    </button>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Spiller nu" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" adjustsLetterSpacingToFitWidth="YES" adjustsFontForContentSizeCategory="YES" translat
                                        <rect key="frame" x="8" y="506" width="394" height="24"/>
...
            <objects>
                <viewController id="bkf-Um-f0z" customClass="FeedbackViewController" customModule="Isdisco" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="3MX-8l-3cr">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Feedback" textAlignment="center" lineBreakMode="wordWrap" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bt3-y8-2E0">
                                <rect key="frame" x="143.5" y="69" width="127" height="36"/>
                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle0"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Min feedback omhandler følgende..." textAlignment="center" lineBreakMode="wordWrap" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vLS-Wz-GSc">
...
                            </textView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jQu-cb-ATn">
                                <rect key="frame" x="155.5" y="753" width="103" height="30"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="30" id="tU0-AY-zOy"/>
                                </constraints>
                                <state key="normal" title="Send feedback"/>
                                <connections>
                                    <action selector="sendFeedback:" destination="bkf-Um-f0z" eventType="touchUpInside" id="zxS-Of-s4a"/>
                                </connections>
                            </button>
                            <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Crf-xN-oU0">
                                <rect key="frame" x="20" y="175" width="374" height="100"/>
...
